--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,11 @@
 ---
-
+  import BaseLayout from '../layouts/BaseLayout.astro';
+  import HeaderComponent from '../components/HeaderComponent.astro';
+  const pageTitle = "Marcel Arndt Web-Developer";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <HeaderComponent />
+  <h2>Mein großartiger Blog-Untertitel</h2>
+  <img src="./assets/pictures/about-me.png">
+</BaseLayout>
