--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
   import BaseLayout from '../layouts/BaseLayout.astro';
   import HeaderComponent from '../components/HeaderComponent.astro';
+  import HeroComponent from '../components/HeroComponent.astro';
   const pageTitle = "Marcel Arndt Web-Developer";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <HeaderComponent />
-  <h2>Mein großartiger Blog-Untertitel</h2>
-  <img src="./assets/pictures/about-me.png">
+  <HeroComponent />
 </BaseLayout>
