--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,10 @@
 $system-font: "RedditSans";
-
+$font-size-100: 1.125rem;
+$font-size-200: clamp(1.125rem, 5vw, 1.75rem);
 $font-color: #290509;
+$font-white-color:#fff;
 $main-color: #e44064;
+$dark-red:#290509;
 $max-width:1920px;
+$button-color:#14c587;
+$button-color-hover:#2be67f;
