--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,61 @@
 body{
     font-family: $system-font;
     color: $font-color;
+    font-weight: 300;
     margin: 0px;
+    background: linear-gradient(125deg, #fb877f, #d30a50);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+p{
+   color: $font-white-color;
+   font-size: $font-size-200;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    box-sizing: border-box;
+    line-height: 2.5rem;
+}
+
+
+h1 {
+    white-space: pre-line;
+    font-family: RedditSans;
+    line-height: 110%;
+    box-sizing: border-box;
+    font-size: clamp(1.5rem, 12vw, 7.75rem);
+    font-weight: 800;
+    background: linear-gradient(125deg, #ffaa92, #bd0048);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin: 0.6rem 0px 1rem;
+    width: max-content;
+}
+
+button{
+    width: max-content;
+    font-family: RedditSans;
+    letter-spacing: .05ch;
+    background-color: $button-color;
+    padding: 12px 16px;
+    color: $font-color;
+    font-size: 1.31rem;
+    border: none;
+    margin: 24px 0;
+    transition: background-color .25s ease-in-out, scale .25s ease-in-out;
+
+    &:hover{
+        cursor: pointer;
+        scale: 1.05;
+        background-color: $button-color-hover;
+    }
 }
 
 
