--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $font-size-200: clamp(1.125rem, 5vw, 1.75rem);
 $font-color: #290509;
 $font-white-color:#fff;
 $main-color: #e44064;
+$light-orange:#fb877f;
 $dark-red:#290509;
 $max-width:1920px;
 $button-color:#14c587;
