--- a/src/components/HeroComponent.astro
+++ b/src/components/HeroComponent.astro
@@ -13,6 +13,10 @@
     <div class="image-container">
           <img src="./assets/pictures/about-me.png">
     </div>
+    <div class="curtain-wrapper">
+        <div class="curtain inner red"></div>
+        <div class="curtain white"></div>
+    </div>
 </section>
 
 
