--- a/src/components/HeaderComponent.astro
+++ b/src/components/HeaderComponent.astro
@@ -7,7 +7,45 @@ import HamburgerMenu from "./HamburgerMenu.astro"
         <div>
             <a href="#start"><img src="./assets/pictures/logo.svg"></a>
         </div>
+            <div class="flex-nav">
             <HamburgerMenu />
+            <nav class="social">
+                <ul>
+
+                    <li>
+                        <a target="_blank" href="https://github.com/MarcelArndt">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <circle class="icon-fill" cx="16" cy="16" r="16" fill="white"/>
+                            <path d="M8 24C7.45 24 6.97917 23.8042 6.5875 23.4125C6.19583 23.0208 6 22.55 6 22V10C6 9.45 6.19583 8.97917 6.5875 8.5875C6.97917 8.19583 7.45 8 8 8H24C24.55 8 25.0208 8.19583 25.4125 8.5875C25.8042 8.97917 26 9.45 26 10V22C26 22.55 25.8042 23.0208 25.4125 23.4125C25.0208 23.8042 24.55 24 24 24H8ZM16 17L8 12V22H24V12L16 17ZM16 15L24 10H8L16 15ZM8 12V10V22V12Z" fill="#1A1A1A"/>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://github.com/MarcelArndt">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                            <g clip-path="url(#clip0_33_714)">
+                            <path class="icon-fill" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 0C24.8369 0 32.0001 7.34389 32.0001 16.4047C32.0001 23.6511 27.4209 29.7983 21.0673 31.9695C20.2561 32.1311 19.9681 31.6188 19.9681 31.182C19.9681 30.6412 19.9873 28.8749 19.9873 26.6797C19.9873 25.1501 19.4753 24.1518 18.9009 23.643C22.4641 23.2366 26.2081 21.8492 26.2081 15.5484C26.2081 13.7564 25.5873 12.2941 24.5601 11.1453C24.7265 10.7309 25.2753 9.06233 24.4033 6.80312C24.4033 6.80312 23.0625 6.36356 20.0081 8.48516C18.7297 8.12196 17.3601 7.93921 16.0001 7.93281C14.6401 7.93921 13.2721 8.12196 11.9953 8.48516C8.93766 6.36356 7.59366 6.80312 7.59366 6.80312C6.72486 9.06233 7.27366 10.7309 7.43846 11.1453C6.41606 12.2941 5.79047 13.7564 5.79047 15.5484C5.79047 21.8332 9.52647 23.2418 13.0801 23.6562C12.6225 24.0659 12.2081 24.7884 12.0641 25.8492C11.1521 26.2684 8.83526 26.9939 7.40806 24.4867C7.40806 24.4867 6.56166 22.9105 4.95526 22.7953C4.95526 22.7953 3.39526 22.7746 4.84646 23.7922C4.84646 23.7922 5.89446 24.2962 6.62246 26.1922C6.62246 26.1922 7.56167 29.1201 12.0129 28.1281C12.0209 29.4993 12.0353 30.7916 12.0353 31.182C12.0353 31.6156 11.7409 32.1231 10.9425 31.9711C4.58406 29.8031 6.10352e-05 23.6527 6.10352e-05 16.4047C6.10352e-05 7.34389 7.16486 0 16.0001 0Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_33_714">
+                            <rect  width="32" height="32" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://github.com/MarcelArndt">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.2" viewBox="0 0 32 32" width="32" height="32">
+                                <path id="Farbfüllung 1" fill-rule="evenodd" class="icon-fill" d="m15.86 0.01c0.37-0.01 0.92 0.01 1.22 0.03 0.29 0.02 0.74 0.07 0.99 0.1 0.26 0.03 0.74 0.12 1.08 0.18 0.34 0.07 0.93 0.22 1.3 0.33 0.37 0.1 0.97 0.31 1.34 0.45 0.36 0.15 0.93 0.4 1.27 0.57 0.34 0.17 0.81 0.42 1.04 0.56 0.23 0.14 0.59 0.37 0.8 0.51 0.21 0.14 0.57 0.4 0.82 0.59 0.24 0.19 0.62 0.51 0.85 0.71 0.23 0.2 0.64 0.6 0.91 0.89 0.28 0.28 0.67 0.73 0.89 1 0.21 0.26 0.5 0.64 0.64 0.85 0.15 0.21 0.38 0.55 0.51 0.76 0.13 0.21 0.37 0.62 0.52 0.92 0.16 0.3 0.39 0.76 0.51 1.04 0.12 0.27 0.3 0.71 0.4 0.97 0.09 0.27 0.22 0.63 0.27 0.8 0.05 0.18 0.15 0.54 0.22 0.8 0.06 0.26 0.16 0.72 0.22 1.02 0.05 0.29 0.13 0.81 0.17 1.13 0.05 0.43 0.07 0.92 0.07 1.72 0 0.63-0.02 1.32-0.05 1.58-0.03 0.25-0.1 0.72-0.15 1.05-0.05 0.33-0.16 0.86-0.24 1.18-0.08 0.32-0.19 0.72-0.24 0.9-0.05 0.17-0.18 0.53-0.27 0.8-0.1 0.26-0.28 0.7-0.4 0.97-0.12 0.28-0.35 0.75-0.51 1.04-0.15 0.3-0.39 0.71-0.52 0.92-0.13 0.21-0.36 0.55-0.51 0.76-0.14 0.21-0.43 0.59-0.64 0.86-0.22 0.26-0.61 0.71-0.89 0.99-0.27 0.29-0.68 0.69-0.91 0.89-0.23 0.2-0.61 0.52-0.85 0.71-0.25 0.19-0.64 0.47-0.88 0.63-0.24 0.16-0.67 0.42-0.94 0.58-0.27 0.16-0.72 0.4-1 0.53-0.27 0.13-0.78 0.35-1.13 0.49-0.36 0.14-0.93 0.34-1.28 0.44-0.35 0.11-0.93 0.25-1.28 0.32-0.35 0.08-0.85 0.16-1.12 0.2-0.26 0.03-0.72 0.08-1.01 0.1-0.3 0.02-0.8 0.04-1.12 0.04-0.32 0-0.82-0.02-1.12-0.04-0.29-0.02-0.75-0.07-1.01-0.1-0.27-0.04-0.77-0.12-1.12-0.2-0.35-0.07-0.93-0.21-1.28-0.32-0.35-0.1-0.93-0.3-1.3-0.44-0.36-0.15-0.93-0.4-1.27-0.57-0.34-0.17-0.81-0.42-1.04-0.56-0.23-0.14-0.58-0.36-0.78-0.5-0.2-0.13-0.5-0.34-0.68-0.48-0.17-0.13-0.48-0.37-0.67-0.54-0.2-0.16-0.67-0.6-1.04-0.98-0.38-0.37-0.86-0.9-1.08-1.18-0.22-0.27-0.52-0.66-0.66-0.87-0.15-0.21-0.38-0.55-0.51-0.76-0.13-0.21-0.36-0.62-0.52-0.92-0.16-0.29-0.39-0.76-0.51-1.04-0.12-0.27-0.31-0.73-0.41-1.01-0.11-0.29-0.26-0.75-0.33-1.02-0.08-0.28-0.19-0.71-0.25-0.96-0.05-0.25-0.13-0.68-0.18-0.96-0.04-0.27-0.1-0.7-0.13-0.95-0.03-0.26-0.05-0.95-0.05-1.58 0-0.64 0.02-1.31 0.05-1.56 0.03-0.24 0.09-0.66 0.13-0.93 0.05-0.28 0.13-0.71 0.18-0.96 0.06-0.25 0.17-0.68 0.25-0.96 0.07-0.27 0.22-0.73 0.33-1.02 0.1-0.28 0.29-0.74 0.41-1.01 0.12-0.28 0.35-0.74 0.51-1.04 0.16-0.3 0.39-0.71 0.52-0.92 0.13-0.21 0.36-0.55 0.51-0.76 0.14-0.21 0.44-0.6 0.66-0.87 0.22-0.28 0.62-0.73 0.88-1 0.27-0.28 0.67-0.67 0.9-0.87 0.23-0.2 0.61-0.52 0.85-0.71 0.25-0.19 0.64-0.47 0.88-0.63 0.24-0.16 0.67-0.42 0.94-0.58 0.27-0.16 0.71-0.39 0.96-0.51 0.25-0.12 0.74-0.34 1.09-0.48 0.36-0.14 0.97-0.35 1.36-0.47 0.4-0.12 1.04-0.28 1.44-0.35 0.39-0.08 0.9-0.16 1.12-0.19 0.21-0.02 0.57-0.06 0.79-0.08 0.22-0.01 0.71-0.03 1.08-0.03zm-7.52 6.16c-0.12 0.03-0.32 0.12-0.44 0.19-0.12 0.07-0.31 0.21-0.42 0.32-0.11 0.12-0.25 0.3-0.31 0.42-0.06 0.12-0.13 0.33-0.17 0.46-0.03 0.13-0.06 0.32-0.06 0.42 0 0.1 0.03 0.3 0.07 0.44 0.03 0.14 0.11 0.36 0.18 0.49 0.07 0.13 0.23 0.33 0.35 0.45 0.12 0.11 0.31 0.25 0.43 0.31 0.12 0.06 0.31 0.13 0.44 0.17 0.13 0.03 0.32 0.06 0.43 0.05 0.11 0 0.31-0.02 0.46-0.06 0.14-0.03 0.35-0.11 0.45-0.17 0.11-0.06 0.3-0.2 0.43-0.32 0.16-0.16 0.27-0.32 0.38-0.54 0.14-0.29 0.15-0.36 0.17-0.7 0.01-0.28-0.01-0.44-0.06-0.62-0.03-0.13-0.12-0.34-0.2-0.46-0.07-0.12-0.22-0.3-0.34-0.41-0.12-0.11-0.3-0.24-0.39-0.29-0.1-0.05-0.28-0.12-0.4-0.15-0.12-0.04-0.35-0.06-0.5-0.06-0.16 0-0.38 0.03-0.5 0.06zm12.65 4.59c-0.08 0.01-0.33 0.05-0.56 0.1-0.23 0.04-0.61 0.15-0.84 0.23-0.23 0.08-0.61 0.25-0.84 0.38-0.23 0.13-0.54 0.34-0.7 0.46-0.15 0.13-0.35 0.3-0.44 0.38-0.08 0.09-0.23 0.25-0.33 0.36l-0.17 0.2 0.01-1.74h-3.83v12.69h3.83c0-6.7 0.01-7.24 0.06-7.46 0.03-0.14 0.12-0.39 0.2-0.54 0.07-0.15 0.23-0.4 0.34-0.56 0.12-0.15 0.34-0.37 0.49-0.49 0.16-0.12 0.36-0.26 0.44-0.31 0.09-0.05 0.3-0.14 0.46-0.2 0.17-0.06 0.45-0.12 0.64-0.15 0.25-0.03 0.43-0.03 0.68 0 0.24 0.04 0.42 0.09 0.62 0.19q0.28 0.13 0.47 0.35c0.1 0.12 0.23 0.29 0.28 0.39 0.06 0.1 0.15 0.34 0.2 0.54 0.06 0.2 0.12 0.55 0.15 0.78 0.02 0.23 0.03 1.96 0.03 3.94v3.52h3.8c-0.01-5.87-0.02-7.77-0.05-8.1-0.02-0.32-0.07-0.8-0.12-1.08-0.04-0.27-0.14-0.69-0.21-0.93-0.08-0.25-0.2-0.59-0.28-0.76-0.08-0.18-0.23-0.45-0.34-0.6-0.1-0.15-0.29-0.39-0.42-0.53-0.13-0.15-0.34-0.33-0.46-0.41-0.12-0.08-0.35-0.21-0.52-0.3-0.16-0.08-0.47-0.19-0.68-0.25-0.32-0.08-0.48-0.1-1.07-0.11-0.39 0-0.77 0-0.84 0.01zm-14.01 13.06h3.79v-12.65h-3.79z"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            </div>
     </header>
 </div>
 
@@ -36,5 +74,35 @@ import HamburgerMenu from "./HamburgerMenu.astro"
         box-sizing: border-box;
         padding: 0px 6rem;
         align-items: center;
+    }
+
+    .flex-nav{
+        display: flex;
+        height: 100%;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .icon-fill{
+        fill:white;
+    }
+
+    .social ul{
+        display: flex;
+
+        li{
+            margin-top: 5px;
+            transition: scale 0.25s ease-in-out, transform 0.25s ease-in-out;
+        }
+
+        li:not(first-child){
+            margin-left: 2rem;
+        }
+        li:hover{
+            transform: translate(1px, -3px);
+            scale: 1.05;
+        }
+
+
     }
 </style>
