--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,12 @@
   import BaseLayout from '../layouts/BaseLayout.astro';
   import HeaderComponent from '../components/HeaderComponent.astro';
   import HeroComponent from '../components/HeroComponent.astro';
+  import AboutMe from '../components/AboutMe.astro';
   const pageTitle = "Marcel Arndt Web-Developer";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <HeaderComponent />
   <HeroComponent />
+  <AboutMe  />
 </BaseLayout>
